Build and fixed audio test mode

--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,15 @@ RADDIR_ADMIN_TOKEN=
 # Server password (leave empty for no password)
 RADDIR_PASSWORD=
 
+# TLS — server always runs HTTPS
+# Mode: "selfsigned" (default, auto-generated), "letsencrypt", or "custom"
+RADDIR_TLS_MODE=selfsigned
+# Let's Encrypt: requires a domain pointing to this server and port 80 open for ACME challenge
+RADDIR_TLS_DOMAIN=
+RADDIR_TLS_EMAIL=
+# Custom: paths to your own PEM cert and key files
+RADDIR_TLS_CERT=
+RADDIR_TLS_KEY=
+
 # Logging
 RADDIR_LOG_LEVEL=info
