--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,20 +11,22 @@
   },
   "dependencies": {
     "@raddir/shared": "workspace:*",
-    "mediasoup": "^3.14.0",
-    "ws": "^8.18.0",
-    "fastify": "^5.2.0",
+    "acme-client": "^5.4.0",
+    "argon2": "^0.41.0",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^16.4.0",
+    "fastify": "^5.2.0",
+    "mediasoup": "^3.14.0",
     "nanoid": "^5.0.0",
-    "argon2": "^0.41.0",
-    "pino": "^9.6.0"
+    "pino": "^9.6.0",
+    "selfsigned": "^5.5.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.0",
     "@types/better-sqlite3": "^7.6.0",
     "@types/node": "^22.0.0",
-    "typescript": "^5.7.0",
-    "tsx": "^4.19.0"
+    "@types/ws": "^8.5.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5.7.0"
   }
 }
