--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "@raddir/shared": "workspace:*",
     "acme-client": "^5.4.0",
     "argon2": "^0.41.0",
