Cleanup AGPLv3 License

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,27 @@
 node_modules
 dist
 dist-electron
+out
+release
+coverage
+
 *.db
 *.db-journal
+*.db-shm
+*.db-wal
+data/
+*.pem
+
 .env
+.env.local
+.env.production
 .git
 .gitignore
+.vscode
+.idea
+
 README.md
+LICENSE
 docs/
+
 packages/client/
