--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "raddir",
   "version": "0.1.1",
   "private": true,
+  "license": "AGPL-3.0-only",
   "description": "A modern, self-hostable, privacy-first voice platform",
   "scripts": {
     "dev:server": "pnpm --filter @raddir/server dev",
