--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ RADDIR_DB_PATH=./data/raddir.db
 RADDIR_ADMIN_TOKEN=
 # Server password (leave empty for no password)
 RADDIR_PASSWORD=
+# Set to "true" to allow admin API without a token (NOT recommended for public servers)
+RADDIR_OPEN_ADMIN=false
 
 # TLS — server always runs HTTPS
 # Mode: "selfsigned" (default, auto-generated), "letsencrypt", or "custom"
