--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ RADDIR_ADMIN_TOKEN=
 RADDIR_PASSWORD=
 # Set to "true" to allow admin API without a token (NOT recommended for public servers)
 RADDIR_OPEN_ADMIN=false
+# Set to "true" ONLY if behind a reverse proxy that sets X-Forwarded-For
+# When false (default), rate limiting uses the direct TCP connection IP
+RADDIR_TRUST_PROXY=false
 
 # TLS — server always runs HTTPS
 # Mode: "selfsigned" (default, auto-generated), "letsencrypt", or "custom"
