--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -15,9 +15,9 @@ COPY packages/server/ packages/server/
 # Install dependencies (including native addons: mediasoup, better-sqlite3, argon2)
 RUN pnpm install --frozen-lockfile
 
-# Build shared first, then server
+# Build shared first, then server (tsc -b follows project references)
 RUN pnpm --filter @raddir/shared build
-RUN pnpm --filter @raddir/server build
+RUN cd packages/server && npx tsc -b
 
 # ── Production stage ──────────────────────────────────────────────────────────
 FROM node:20-bookworm-slim AS production
