fix(client): set linux artifactName for scoped package release

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -58,6 +58,7 @@
       "category": "public.app-category.social-networking"
     },
     "linux": {
+      "artifactName": "raddir-${version}-${arch}.${ext}",
       "target": [
         {
           "target": "AppImage",
