--- a/.github/workflows/docker-server.yml
+++ b/.github/workflows/docker-server.yml
@@ -3,8 +3,23 @@ name: Build & Push Server Docker Image
 on:
   push:
     tags:
-      - "v*"
+      - "server-v*"
   workflow_dispatch:
+    inputs:
+      publish:
+        description: "Push image to Docker Hub"
+        required: false
+        default: false
+        type: boolean
+      version:
+        description: "Server version tag (defaults to packages/server/package.json)"
+        required: false
+        type: string
+      latest:
+        description: "Also publish :latest"
+        required: false
+        default: false
+        type: boolean
 
 env:
   REGISTRY: docker.io
@@ -25,30 +40,39 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/server-v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract version from tag
+      - name: Resolve image metadata
         id: meta
         run: |
           if [[ "${{ github.ref_type }}" == "tag" ]]; then
             VERSION="${{ github.ref_name }}"
-            VERSION="${VERSION#v}"
-            echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
-            echo "tags=${IMAGE_NAME}:${VERSION},${IMAGE_NAME}:latest" >> "$GITHUB_OUTPUT"
+            VERSION="${VERSION#server-v}"
           else
-            echo "version=dev" >> "$GITHUB_OUTPUT"
-            echo "tags=${IMAGE_NAME}:dev" >> "$GITHUB_OUTPUT"
+            VERSION="${{ github.event.inputs.version }}"
+            if [[ -z "$VERSION" ]]; then
+              VERSION=$(node -p "JSON.parse(require('fs').readFileSync('packages/server/package.json','utf8')).version")
+            fi
           fi
+
+          TAGS="${IMAGE_NAME}:${VERSION}"
+          if [[ "${{ github.ref_type }}" == "tag" || "${{ github.event.inputs.latest }}" == "true" ]]; then
+            TAGS="${TAGS},${IMAGE_NAME}:latest"
+          fi
+
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+          echo "tags=${TAGS}" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile.server
-          push: true
+          push: ${{ startsWith(github.ref, 'refs/tags/server-v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true') }}
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
