--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -3,8 +3,23 @@ name: Build Electron Releases
 on:
   push:
     tags:
-      - "v*"
+      - "client-v*"
   workflow_dispatch:
+    inputs:
+      publish:
+        description: "Publish a GitHub Release"
+        required: false
+        default: false
+        type: boolean
+      version:
+        description: "Client version to release (defaults to packages/client/package.json)"
+        required: false
+        type: string
+      draft:
+        description: "Create release as draft"
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   build:
@@ -76,11 +91,33 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/client-v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
     permissions:
       contents: write
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Resolve release metadata
+        id: meta
+        shell: bash
+        run: |
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+            TAG="${{ github.ref_name }}"
+            VERSION="${TAG#client-v}"
+          else
+            VERSION="${{ github.event.inputs.version }}"
+            if [[ -z "$VERSION" ]]; then
+              VERSION=$(node -p "JSON.parse(require('fs').readFileSync('packages/client/package.json','utf8')).version")
+            fi
+            TAG="client-v${VERSION}"
+          fi
+
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+          echo "name=Raddir Client v${VERSION}" >> "$GITHUB_OUTPUT"
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -93,7 +130,10 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          draft: false
+          tag_name: ${{ steps.meta.outputs.tag }}
+          target_commitish: ${{ github.sha }}
+          name: ${{ steps.meta.outputs.name }}
+          draft: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.draft == 'true' }}
           generate_release_notes: true
           files: artifacts/*
         env:
