--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,13 @@
   "build": {
     "appId": "com.raddir.client",
     "productName": "Raddir",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "ehrma",
+        "repo": "Raddir"
+      }
+    ],
     "directories": {
       "output": "release"
     },
@@ -80,13 +87,14 @@
   },
   "dependencies": {
     "@raddir/shared": "workspace:*",
+    "clsx": "^2.1.0",
+    "electron-updater": "^6.6.2",
+    "lucide-react": "^0.469.0",
     "mediasoup-client": "^3.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zustand": "^5.0.0",
-    "lucide-react": "^0.469.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
