--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raddir/client",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "private": true,
   "license": "AGPL-3.0-only",
   "author": {
@@ -52,7 +52,7 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "public/icon.png"
+      "icon": "public/raddir-tray-icon.png"
     },
     "mac": {
       "target": [
@@ -61,7 +61,7 @@
           "arch": ["x64", "arm64"]
         }
       ],
-      "icon": "public/icon.png",
+      "icon": "public/raddir-tray-icon.png",
       "category": "public.app-category.social-networking"
     },
     "linux": {
@@ -76,10 +76,11 @@
           "arch": ["x64"]
         }
       ],
-      "icon": "public/icon.png",
+      "icon": "public/raddir-tray-icon.png",
       "category": "Network"
     },
     "nsis": {
+      "artifactName": "Raddir-Setup-${version}.${ext}",
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true
